
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_3__ ;
typedef struct TYPE_5__ TYPE_2__ ;
typedef struct TYPE_4__ TYPE_1__ ;


struct TYPE_6__ {scalar_t__ target_id; int status; scalar_t__ ccb_sim_ptr; } ;
struct TYPE_4__ {scalar_t__* cdb_bytes; } ;
struct TYPE_5__ {int cdb_len; TYPE_1__ cdb_io; } ;
union ccb {TYPE_3__ ccb_h; TYPE_2__ csio; } ;
typedef scalar_t__ u_int8_t ;
typedef int u_int32_t ;
typedef scalar_t__ u_int16_t ;
struct scsi_rw_6 {int length; int addr; } ;
struct scsi_rw_10 {int length; int addr; } ;
struct gdt_softc {scalar_t__ sc_cmd_off; scalar_t__ sc_ic_all_size; scalar_t__ sc_cmd_cnt; int sc_state; int sc_buffer_dmat; int (* sc_set_sema0 ) (struct gdt_softc*) ;int sc_devnode; } ;
struct gdt_ccb {int gc_cmd_index; union ccb* gc_ccb; int gc_dmamap; scalar_t__ gc_cmd; int gc_flags; int gc_service; } ;
struct cam_sim {int dummy; } ;


 int CAM_RELEASE_SIMQ ;
 int EINPROGRESS ;
 int GDT_CACHESERVICE ;
 scalar_t__ GDT_CACHE_BLOCKCNT ;
 scalar_t__ GDT_CACHE_BLOCKNO ;
 scalar_t__ GDT_CACHE_DEVICENO ;
 scalar_t__ GDT_CACHE_SZ ;
 scalar_t__ GDT_CMD_COMMANDINDEX ;
 scalar_t__ GDT_CMD_OPCODE ;
 int GDT_CMD_SZ ;
 scalar_t__ GDT_CMD_UNION ;
 scalar_t__ GDT_DPMEM_COMMAND_OFFSET ;
 int GDT_DPRINTF (int ,char*) ;
 int GDT_D_CMD ;
 int GDT_D_DEBUG ;
 int GDT_D_INVALID ;
 int GDT_GCF_SCSI ;
 scalar_t__ GDT_READ ;
 int GDT_SHUTDOWN ;
 scalar_t__ GDT_WRITE ;
 scalar_t__ GDT_WRITE_THR ;
 int SRW_TOPADDR ;
 scalar_t__ WRITE_10 ;
 scalar_t__ WRITE_6 ;
 int bus_dmamap_load_ccb (int ,int ,union ccb*,int ,struct gdt_ccb*,int ) ;
 int bzero (scalar_t__,int ) ;
 int device_get_nameunit (int ) ;
 int gdt_enc16 (scalar_t__,scalar_t__) ;
 int gdt_enc32 (scalar_t__,int) ;
 struct gdt_ccb* gdt_get_ccb (struct gdt_softc*) ;
 int gdtexecuteccb ;
 scalar_t__ roundup (scalar_t__,int) ;
 int scsi_2btoul (int ) ;
 int scsi_3btoul (int ) ;
 int scsi_4btoul (int ) ;
 int stub1 (struct gdt_softc*) ;
 int xpt_freeze_simq (struct cam_sim*,int) ;

__attribute__((used)) static struct gdt_ccb *
gdt_cache_cmd(struct gdt_softc *gdt, union ccb *ccb)
{
    struct gdt_ccb *gccb;
    struct cam_sim *sim;
    u_int8_t *cmdp;
    u_int16_t opcode;
    u_int32_t blockno, blockcnt;
    int error;

    GDT_DPRINTF(GDT_D_CMD, ("gdt_cache_cmd(%p, %p)\n", gdt, ccb));

    if (roundup(GDT_CMD_UNION + GDT_CACHE_SZ, sizeof(u_int32_t)) +
        gdt->sc_cmd_off + GDT_DPMEM_COMMAND_OFFSET >
        gdt->sc_ic_all_size) {
        GDT_DPRINTF(GDT_D_INVALID, ("%s: gdt_cache_cmd(): DPMEM overflow\n",
  device_get_nameunit(gdt->sc_devnode)));
        return (((void*)0));
    }

    gccb = gdt_get_ccb(gdt);
    if (gccb == ((void*)0)) {
        GDT_DPRINTF(GDT_D_DEBUG, ("%s: No free command index found\n",
  device_get_nameunit(gdt->sc_devnode)));
        return (gccb);
    }
    bzero(gccb->gc_cmd, GDT_CMD_SZ);
    sim = (struct cam_sim *)ccb->ccb_h.ccb_sim_ptr;
    gccb->gc_ccb = ccb;
    gccb->gc_service = GDT_CACHESERVICE;
    gccb->gc_flags = GDT_GCF_SCSI;

    if (gdt->sc_cmd_cnt == 0)
        gdt->sc_set_sema0(gdt);
    gdt_enc32(gccb->gc_cmd + GDT_CMD_COMMANDINDEX,
              gccb->gc_cmd_index);
    cmdp = ccb->csio.cdb_io.cdb_bytes;
    opcode = (*cmdp == WRITE_6 || *cmdp == WRITE_10) ? GDT_WRITE : GDT_READ;
    if ((gdt->sc_state & GDT_SHUTDOWN) && opcode == GDT_WRITE)
        opcode = GDT_WRITE_THR;
    gdt_enc16(gccb->gc_cmd + GDT_CMD_OPCODE, opcode);

    gdt_enc16(gccb->gc_cmd + GDT_CMD_UNION + GDT_CACHE_DEVICENO,
              ccb->ccb_h.target_id);
    if (ccb->csio.cdb_len == 6) {
        struct scsi_rw_6 *rw = (struct scsi_rw_6 *)cmdp;
        blockno = scsi_3btoul(rw->addr) & ((SRW_TOPADDR<<16) | 0xffff);
        blockcnt = rw->length ? rw->length : 0x100;
    } else {
        struct scsi_rw_10 *rw = (struct scsi_rw_10 *)cmdp;
        blockno = scsi_4btoul(rw->addr);
        blockcnt = scsi_2btoul(rw->length);
    }
    gdt_enc32(gccb->gc_cmd + GDT_CMD_UNION + GDT_CACHE_BLOCKNO,
              blockno);
    gdt_enc32(gccb->gc_cmd + GDT_CMD_UNION + GDT_CACHE_BLOCKCNT,
              blockcnt);

    error = bus_dmamap_load_ccb(gdt->sc_buffer_dmat,
                                gccb->gc_dmamap,
                                ccb,
                                gdtexecuteccb,
                                gccb, 0);
    if (error == EINPROGRESS) {
        xpt_freeze_simq(sim, 1);
        gccb->gc_ccb->ccb_h.status |= CAM_RELEASE_SIMQ;
    }
    return (gccb);
}
